[package]
name = "logging"
version = "2.0.6"
edition = "2021"

[dependencies]
ansi_term = { version = "0.12.1", optional = true }

[features]
default = ["default_log_console", "std_err", "coloured_output"]
default_log_console = []
default_log_all = []
std_err = []
coloured_output = ["dep:ansi_term"]